Use HTTPS instead of HTTP to resolve dependencies
This fixes a security vulnerability in this project where the `pom.xml`
files were configuring Maven to resolve dependencies over HTTP instead of
HTTPS.

Signed-off-by: Jonathan Leitschuh <Jonathan.Leitschuh@gmail.com>

--- a/pom.xml
+++ b/pom.xml
@@ -32,7 +32,7 @@
 			</snapshots>
 			<id>adobe-public-releases</id>
 			<name>Adobe Basel Public Repository</name>
-			<url>http://repo.adobe.com/nexus/content/groups/public</url>
+			<url>https://repo.adobe.com/nexus/content/groups/public</url>
 		</repository>
 
 	</repositories>
@@ -113,7 +113,7 @@
 		<pluginRepository>
 			<id>adobe-public-releases</id>
 			<name>Adobe Basel Public Repository</name>
-			<url>http://repo.adobe.com/nexus/content/groups/public</url>
+			<url>https://repo.adobe.com/nexus/content/groups/public</url>
 			<releases>
 				<enabled>true</enabled>
 				<updatePolicy>never</updatePolicy>
